sugar/tests/success/type_aliasweird.mx

-- Feature or a bug?!

type Hehe = a ;

a, u : Hehe, v : ~ a |- u <-> v

