sugar/tests/fail/type_alias.mx

type Id a = a ;

x : Id |- x

